// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TagValueContainer should exclude selected items from select in single mode 1`] = `
<div
  className="base-tag-container nice-tags-container tag-value-container"
>
  <div
    className="nice-tag"
  >
    <span
      className="nice-tag-label"
    >
      Aaa
    </span>
    <span
      className="nice-tag-badge"
    >
      <input
        disabled={false}
        onChange={[Function]}
        type="number"
        value={5}
      />
    </span>
    <button
      className="nice-tag-btn"
      onClick={[Function]}
    >
      <i
        className="icon fa-trash-o"
      />
    </button>
  </div>
  <div
    className="nice-tag"
  >
    <span
      className="nice-tag-label"
    >
      <div
        className="tool-tip inline"
      >
        Bbb
        <span
          className="tool-tip--content"
        >
          <p>
            Bee
          </p>
        </span>
      </div>
    </span>
    <span
      className="nice-tag-badge"
    >
      <input
        disabled={false}
        onChange={[Function]}
        type="number"
        value={0}
      />
    </span>
    <button
      className="nice-tag-btn"
      onClick={[Function]}
    >
      <i
        className="icon fa-trash-o"
      />
    </button>
  </div>
</div>
`;

exports[`Component: TagValueContainer should render with all props 1`] = `
<div
  className="base-tag-container nice-tags-container tag-value-container"
>
  <div
    className="nice-tag muted"
  >
    <span
      className="nice-tag-label"
    >
      Aaa
    </span>
    <span
      className="nice-tag-badge"
    >
      <div
        className="nice-tag-dropdown hover"
      >
        Five
        <ul>
          <li
            data-value={0}
          >
            <a
              onClick={[Function]}
            >
              Zero
            </a>
          </li>
          <li
            data-value={5}
          >
            <a
              onClick={[Function]}
            >
              Five
            </a>
          </li>
        </ul>
      </div>
    </span>
  </div>
  <div
    className="nice-tag muted"
  >
    <span
      className="nice-tag-label"
    >
      <div
        className="tool-tip inline"
      >
        Bbb
        <span
          className="tool-tip--content"
        >
          <p>
            Bee
          </p>
        </span>
      </div>
    </span>
    <span
      className="nice-tag-badge"
    >
      <div
        className="nice-tag-dropdown hover"
      >
        Zero
        <ul>
          <li
            data-value={0}
          >
            <a
              onClick={[Function]}
            >
              Zero
            </a>
          </li>
          <li
            data-value={5}
          >
            <a
              onClick={[Function]}
            >
              Five
            </a>
          </li>
        </ul>
      </div>
    </span>
  </div>
</div>
`;

exports[`Component: TagValueContainer should render with minimal props 1`] = `
<div
  className="base-tag-container nice-tags-container tag-value-container"
/>
`;
